# web-reference-corpus

./: .gitignore  README.md  config.py  labels.v1.json  pyproject.toml  ranking.v1.md  schema.v1.json
data/sources/: website_urls.csv  website_urls_original.csv
evals/: baseline_outputs.example.jsonl  baseline_outputs.generated.jsonl  eval_reference_impact.2026-03-05.json  eval_reference_impact.2026-03-05.md  prompts.example.jsonl  reference_outputs.example.jsonl  reference_outputs.generated.jsonl
scripts/: 00_build_seeds.py  00_import_from_sa.py  01_capture.py  02_embed.py  03_cluster.py  04_label.py  05_reclassify_industry.py  05_retrieve.py  06_build_industry_profiles.py  06_visualize.py  07_export_index.py  build_eval_outputs.py  eval_reference_impact.py  export_for_llm.py  ingest_reference_records.py  validate_corpus.py
src/capture/: cookie_dismiss.py  screenshotter.py
src/cluster/: hdbscan_cluster.py  label_clusters.py
src/embed/: clip_embedder.py  reduction.py
src/retrieve/: query_engine.py  similarity.py
src/utils/: prompt_templates.py  storage.py
